# Teaching-Software-Verification

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  env.sh
.github/workflows/: docker-publish.yml  svf-teaching.yml
Assignment-1/: Assignment-1.cpp  Assignment-1.h  CMakeLists.txt  Test1.cpp
Assignment-2/: Assign-2-Test.cpp  Assignment-2.cpp  Assignment-2.h  CMakeLists.txt  ICFGTraversal.h  Test2.cpp
Assignment-2/testcase/bc/: test1.ll  test2.ll  test3.ll
Assignment-2/testcase/dot/: test1.ll.icfg.dot  test2.ll.icfg.dot
Assignment-2/testcase/src/: test1.c  test2.c  test3.c
Assignment-3/: Assign-3-Test.cpp  Assignment-3.cpp  Assignment-3.h  CMakeLists.txt  Test3.cpp  Z3-ex.cpp
Assignment-4/: Assignment-4.cpp  Assignment-4.h  CMakeLists.txt  Test4.cpp  Z3SSEMgr.cpp  Z3SSEMgr.h
Assignment-4/testcase/bc/: test1.ll  test2.ll  test3.ll
Assignment-4/testcase/dot/: test3.ll.icfg.dot
Assignment-4/testcase/src/: test2.c
SVFIR/: CMakeLists.txt  SVFIR.cpp  compile.sh
SVFIR/src/: example.c
Z3Manager/: Z3Mgr.cpp  Z3Mgr.h
include/: SSE.h  Z3-ex.h  Z3Mgr.h
python/Assignment-1/: Assignment-1.py  Utils.py
python/Assignment-2/: Assignment-2.py
python/Assignment-2/testcase/dot/: test3.ll.icfg.dot
python/Assignment-3/: Assignment-3.py
python/Assignment-4/: Assignment-4.py
python/Assignment-4/testcase/bc/: test2.ll  test3.ll
src/: Assign-2-Test.cpp  Assign-3-Test.cpp  Assign-4-Test.cpp  CMakeLists.txt  ICFGTraversal.cpp  SSE.cpp  Z3Mgr.cpp
